@@ -33,7 +33,11 @@ public class XmlReaderFactory extends XmlTaskManagerFactory {
 		XmlReader task;
 		
 		// Get the task arguments.
-		fileName = getStringArgument(taskConfig, ARG_FILE_NAME, DEFAULT_FILE_NAME);
+		fileName = getStringArgument(
+			taskConfig,
+			ARG_FILE_NAME,
+			getDefaultStringArgument(taskConfig, DEFAULT_FILE_NAME)
+		);
 		enableDateParsing = getBooleanArgument(taskConfig, ARG_ENABLE_DATE_PARSING, DEFAULT_ENABLE_DATE_PARSING);
 		compressionMethod = getCompressionMethodArgument(taskConfig, fileName);
 		
